--- a/Words/Client/Pages/LoginPage.razor
+++ b/Words/Client/Pages/LoginPage.razor
@@ -40,7 +40,7 @@
     [CascadingParameter]
     public Task<AuthenticationState> AuthState { get; set; }
 
-    UserLoginDto userDto = new UserLoginDto { UserName = "Carlton", Password="123456789" };
+    UserLoginDto userDto = new UserLoginDto { UserName = "Mika", Password="123456789" };
 
     string loginFormWarning = "";
 
