--- a/Words/Client/Shared/NavMenu.razor
+++ b/Words/Client/Shared/NavMenu.razor
@@ -16,8 +16,7 @@
                         <a class="nav-link"  href="/registerpage">Register</a>
                     </NotAuthorized>
                     <Authorized>
-                        <a class="nav-link"  href="#">Create Word</a>
-                        <a class="nav-link"  href="#">Logout</a>
+                        <a class="nav-link"  href="/editwordpage">Create Word</a>
                     </Authorized>
                  
                 </AuthorizeView>                   
