--- a/Words/Client/Pages/EditWordPage.razor
+++ b/Words/Client/Pages/EditWordPage.razor
@@ -2,8 +2,7 @@
 @page "/editwordpage/{userId:int}/{wordId:int}"
 @inject HttpClient Http;
 @inject NavigationManager NavigationManager;
-
-@* @attribute [Authorize] *@
+@attribute [Authorize]
 
 <div class="main">
     <div class="main-div">
