--- a/Words/Client/Pages/RegisterPage.razor
+++ b/Words/Client/Pages/RegisterPage.razor
@@ -66,11 +66,15 @@
     protected override async Task OnInitializedAsync()
     {
         var user = (await AuthState).User;
-        if (user.Identity is not null)
+        if (user.Identity is not null && user.Identity.IsAuthenticated)
         {
-            if (user.Identity.IsAuthenticated)
+            var userIdClaim = user.FindFirst("Sub");
+
+            if (userIdClaim != null)
             {
-                NavigationManager.NavigateTo("/wordspage");
+                var userId = userIdClaim.Value;
+
+                NavigationManager.NavigateTo($"/wordspage/{userId}");
             }
         }
 
