--- a/Words/Client/App.razor
+++ b/Words/Client/App.razor
@@ -4,6 +4,7 @@
         <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
             <NotAuthorized>
                 Sorry but you are not allowed to see this. Please register or login
+                <RedirectToHomePage></RedirectToHomePage>
             </NotAuthorized>
         </AuthorizeRouteView>
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
