Add random advice page

--- a/Words/Client/Shared/NavMenu.razor
+++ b/Words/Client/Shared/NavMenu.razor
@@ -17,6 +17,7 @@
                     </NotAuthorized>
                     <Authorized>
                         <a class="nav-link" style="cursor: pointer"  @onclick="GoToCreateWordPage" >Create Word</a>
+                        <a class="nav-link" style="cursor: pointer" href="/advicepage">Random Advice</a>
                     </Authorized>
                  
                 </AuthorizeView>                   
