--- a/Words/Client/Pages/EditWordPage.razor
+++ b/Words/Client/Pages/EditWordPage.razor
@@ -6,8 +6,8 @@
 
 <div class="main">
     <div class="main-div">
-        <h1>Words</h1>
-        <hr>
+        <h1 id="words">Words</h1>
+        <hr id="words-line" />
         
         <div class="edit-form">
             @if (WordId is null)
