--- a/Words/Client/Pages/HomePage.razor
+++ b/Words/Client/Pages/HomePage.razor
@@ -7,8 +7,8 @@
 <div class="main">
     <div class="homepage-background">
 
-        <h1>Words</h1>
-        <hr />
+        <h1 id="words">Words</h1>
+        <hr id="words-line" />
 
         <button type="button" class="btn btn-primary" @onclick="ToLoginPage">Login</button>
         <button type="button" class="btn btn-primary" @onclick="ToRegisterPage">Signup</button>
