--- a/Words/Client/Pages/EditWordPage.razor.css
+++ b/Words/Client/Pages/EditWordPage.razor.css
@@ -1,30 +1,30 @@
-﻿
-h1 {
-    font-family: 'Rubik Mono One', monospace;
-    letter-spacing: 5px;
-    font-size: 3.5rem;
-    font-style: italic;
-    text-align: center;
-    color: white;
-}
-
-hr {
-    height: 10px;
-    width: 100%;
-    background-color: #F0ECE5;
-    margin-bottom: 30px;
-    border-radius: 10px;
-}
-
-
-.main {
+﻿.main {
     padding: 5px;
     display: flex;
-    /* justify-content: center; */
     flex-direction: column;
     align-items: center;
     margin-top: 100px;
 }
+
+.main-div {
+    width: min(450px, 95%);
+    box-sizing: border-box;
+}
+
+/* Logo plus the line */
+
+#words {
+    letter-spacing: 5px;
+    font-size: 3.5rem;
+}
+
+#words-line {
+    height: 10px;
+    border-radius: 10px;
+}
+
+
+/* Form */
 
 .edit-form {
     background-color: #B6BBC4;
@@ -35,10 +35,7 @@ hr {
     box-sizing: border-box;
 }
 
-.main-div {
-    width: min(450px, 95%);
-    box-sizing: border-box;
-}
+
 
 h2 {
     font-weight: 600;
@@ -58,20 +55,6 @@ label {
     margin-bottom: 5px;
 }
 
-/*input {
-    width: 100%;
-    padding: 12px;
-    margin-bottom: 20px;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    transition: border-color 0.3s ease;
-    color: #0F2167;
-}
-
-    input:focus {
-        border-color: #3498db;
-    }*/
 
 .buttons {
     display: flex;
@@ -100,10 +83,6 @@ label {
         font-size: 1rem;
         
     }
-
-    /*input {
-        padding: 9px;
-    }*/
 
     .edit-form {
         padding-left: 15px;
