--- a/Words/Client/Pages/WordsPage.razor
+++ b/Words/Client/Pages/WordsPage.razor
@@ -7,9 +7,9 @@
 
 <div class="main">
 
-    <h1>Words</h1>
+    <h1 id="words">Words</h1>
+    <hr id="words-line" />
 
-    <hr />
     <button class="btn btn-primary" @onclick="CreateWord">Add Word</button>
 
     <div class="container">
@@ -81,7 +81,7 @@
 
     void EditWord(int id)
     {
-        Console.WriteLine(id);
+        // Console.WriteLine(id);
         NavigationManager.NavigateTo($"/editwordpage/{UserId}/{id}");
     }
 
